force-app/main/default/objects/Opportunity/fields/Aktuelle_Planungen__c.field-meta.xml
<CustomField>
    <fullName>Aktuelle_Planungen__c</fullName>
    <label>Aktuelle Planungen</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entwicklung einer neuen Strategie</fullName>
            </value>
            <value>
                <fullName>Überarbeitung einer bestehenden Strategie</fullName>
            </value>
            <value>
                <fullName>In Ökosystem investieren</fullName>
            </value>
            <value>
                <fullName>Firma gründen</fullName>
            </value>
            <value>
                <fullName>Projekt gründen</fullName>
            </value>
            <value>
                <fullName>Bestehenden Plan begutachten lassen</fullName>
            </value>
            <value>
                <fullName>Entscheidungsvorlage erstellen</fullName>
            </value>
            <value>
                <fullName>Zweite Meinung einholen</fullName>
            </value>
            <value>
                <fullName>Technologie besser verstehen</fullName>
            </value>
            <value>
                <fullName>Neue Geschäftsmodelle suchen</fullName>
            </value>
            <value>
                <fullName>Team weiterentwickeln</fullName>
            </value>
            <value>
                <fullName>Firmenkultur verändern</fullName>
            </value>
            <value>
                <fullName>Sense of urgency schaffen</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>