force-app/main/default/objects/Opportunity/fields/Andere_Beratungen_im_Einsatz__c.field-meta.xml
<CustomField>
    <fullName>Andere_Beratungen_im_Einsatz__c</fullName>
    <label>Andere Beratungen im Einsatz</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unklar</fullName>
            </value>
            <value>
                <fullName>Unbekannt</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
            <value>
                <fullName>Bain</fullName>
            </value>
            <value>
                <fullName>BCG / BCG Digital Ventures</fullName>
            </value>
            <value>
                <fullName>Bridgemaker</fullName>
            </value>
            <value>
                <fullName>Deloitte</fullName>
            </value>
            <value>
                <fullName>etVenture / EY</fullName>
            </value>
            <value>
                <fullName>Faktor 10</fullName>
            </value>
            <value>
                <fullName>KPMG</fullName>
            </value>
            <value>
                <fullName>McKinsey</fullName>
            </value>
            <value>
                <fullName>PWC</fullName>
            </value>
            <value>
                <fullName>RCKT</fullName>
            </value>
            <value>
                <fullName>TLLG</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>