force-app/main/default/objects/Opportunity/fields/Branche__c.field-meta.xml
<CustomField>
    <fullName>Branche__c</fullName>
    <label>Branche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automobilzulieferer</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banken</fullName>
                <label>Banken/Finance</label>
            </value>
            <value>
                <fullName>Baugewerbe</fullName>
            </value>
            <value>
                <fullName>Bildung</fullName>
            </value>
            <value>
                <fullName>Chemie</fullName>
            </value>
            <value>
                <fullName>Druck/Papier/Verpackung</fullName>
            </value>
            <value>
                <fullName>Elektro/Elektrotechnik</fullName>
            </value>
            <value>
                <fullName>Energie</fullName>
                <label>Energiewirtschaft</label>
            </value>
            <value>
                <fullName>Gesundheitswesen</fullName>
            </value>
            <value>
                <fullName>Handel</fullName>
            </value>
            <value>
                <fullName>Immobilien</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
                <label>IT / Software</label>
            </value>
            <value>
                <fullName>Konsumgüter</fullName>
            </value>
            <value>
                <fullName>Lagerlogistik</fullName>
            </value>
            <value>
                <fullName>Luftfahrt</fullName>
            </value>
            <value>
                <fullName>Maschinenbau</fullName>
            </value>
            <value>
                <fullName>Medien</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Öffentliche Unternehmen</fullName>
                <label>Öffentlicher Sektor</label>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Telekommunikation</fullName>
            </value>
            <value>
                <fullName>Touristik</fullName>
            </value>
            <value>
                <fullName>VCs/Investoren</fullName>
            </value>
            <value>
                <fullName>Verkehrslogistik</fullName>
            </value>
            <value>
                <fullName>Versicherung</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
                <isActive>false</isActive>
                <label>Andere</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>