force-app/main/default/objects/Opportunity/fields/Branche_Account__c.field-meta.xml
<CustomField>
    <fullName>Branche_Account__c</fullName>
    <formula>TEXT(Account.Industry)</formula>
    <label>Branche</label>
    <type>Text</type>
</CustomField>