force-app/main/default/objects/Opportunity/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decode and Navigate</fullName>
            </value>
            <value>
                <fullName>Validate and Realize</fullName>
            </value>
            <value>
                <fullName>Structure and Position</fullName>
            </value>
            <value>
                <fullName>Align and Upskill</fullName>
            </value>
            <value>
                <fullName>Immobilie</fullName>
            </value>
            <value>
                <fullName>Mandate CK</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
                <label>Partnererlöse</label>
            </value>
            <value>
                <fullName>Speaking Engagement</fullName>
                <label>Reden</label>
            </value>
            <value>
                <fullName>hy Tech</fullName>
            </value>
            <value>
                <fullName>2019_Briefing</fullName>
                <isActive>false</isActive>
                <label>2019_Briefings</label>
            </value>
            <value>
                <fullName>2019_Intelligence</fullName>
                <isActive>false</isActive>
                <label>2019_Intelligence</label>
            </value>
            <value>
                <fullName>2019_Solutions</fullName>
                <isActive>false</isActive>
                <label>2019_Solutions</label>
            </value>
            <value>
                <fullName>Sales / Pricing</fullName>
                <isActive>false</isActive>
                <label>Sales / Pricing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>