force-app/main/default/objects/Opportunity/fields/Eigene_Budgetverantwortung__c.field-meta.xml
<CustomField>
    <fullName>Eigene_Budgetverantwortung__c</fullName>
    <label>Eigene Budgetverantwortung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nein</fullName>
            </value>
            <value>
                <fullName>Vielleicht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>