force-app/main/default/objects/Opportunity/fields/Entscheidungsdatum_Verlust__c.field-meta.xml
<CustomField>
    <fullName>Entscheidungsdatum_Verlust__c</fullName>
    <label>Entscheidungsdatum Verlust</label>
    <type>Date</type>
</CustomField>