force-app/main/default/objects/Opportunity/fields/Erstkontakt__c.field-meta.xml
<CustomField>
    <fullName>Erstkontakt__c</fullName>
    <label>Lead-Erstkontakt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>hy_Users</valueSetName>
    </valueSet>
</CustomField>