force-app/main/default/objects/Opportunity/fields/Jahresziel_2018__c.field-meta.xml
<CustomField>
    <fullName>Jahresziel_2018__c</fullName>
    <formula>6200000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jahresziel 2018</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>