force-app/main/default/objects/Opportunity/fields/Jahresziel_2019__c.field-meta.xml
<CustomField>
    <fullName>Jahresziel_2019__c</fullName>
    <formula>7300000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jahresziel 2019</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>