force-app/main/default/objects/Opportunity/fields/Kontaktperson__c.field-meta.xml
<CustomField>
    <fullName>Kontaktperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontaktperson</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Benutzer ist inaktiv.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>