force-app/main/default/objects/Opportunity/fields/Lead_Partner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Partner__c</fullName>
    <label>Verantwortlicher bei hy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CK</fullName>
                <label>Christoph Keese</label>
            </value>
            <value>
                <fullName>JW</fullName>
                <label>Jan Wildhirth</label>
            </value>
            <value>
                <fullName>SH</fullName>
                <label>Sebastian Herzog</label>
            </value>
            <value>
                <fullName>SV</fullName>
                <label>Sebastian Voigt</label>
            </value>
            <value>
                <fullName>JL</fullName>
                <label>John Lange</label>
            </value>
            <value>
                <fullName>SK</fullName>
                <label>Simon Kozlik</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Artur Reimer</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <label>Martin Spindler</label>
            </value>
            <value>
                <fullName>MK</fullName>
                <label>Manuel Kilian</label>
            </value>
            <value>
                <fullName>JT</fullName>
                <label>Jan Thede</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>