force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Grund für Verlust</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Postponed</fullName>
                <label>Verschoben</label>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
                <label>Keine Entscheidung</label>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
                <label>An Wettbewerber verloren</label>
            </value>
            <value>
                <fullName>Ansprechpartner gewechselt</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <label>Kein Budget</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <label>Preis</label>
            </value>
            <value>
                <fullName>Entscheider nicht überzeugt</fullName>
            </value>
            <value>
                <fullName>Keine Antwort</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Andere</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>