force-app/main/default/objects/Opportunity/fields/Lost_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor__c</fullName>
    <label>Lost to Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>