force-app/main/default/objects/Opportunity/fields/opp_month__c.field-meta.xml
<CustomField>
    <fullName>opp_month__c</fullName>
    <formula>MONTH(CloseDate)</formula>
    <label>opp_month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>