force-app/main/default/objects/Opportunity/fields/opp_year__c.field-meta.xml
<CustomField>
    <fullName>opp_year__c</fullName>
    <formula>YEAR(CloseDate)</formula>
    <label>opp_year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>