force-app/main/default/objects/Opportunity/fields/Pers_Herausforderung_Gespr_chspartner__c.field-meta.xml
<CustomField>
    <fullName>Pers_Herausforderung_Gespr_chspartner__c</fullName>
    <label>Pers. Herausforderung Gesprächspartner</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stammgeschäft digitalisieren</fullName>
            </value>
            <value>
                <fullName>Neue Geschäfte aufbauen</fullName>
            </value>
            <value>
                <fullName>Umsatzziele erreichen</fullName>
            </value>
            <value>
                <fullName>Prozesse optimieren</fullName>
            </value>
            <value>
                <fullName>Ergebnislücke schließen</fullName>
            </value>
            <value>
                <fullName>Gremien überzeugen</fullName>
            </value>
            <value>
                <fullName>Budget bekommen</fullName>
            </value>
            <value>
                <fullName>Budget investieren</fullName>
            </value>
            <value>
                <fullName>Internen Widerstand überwinden</fullName>
            </value>
            <value>
                <fullName>Sense of urgency überzeugen</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>