force-app/main/default/objects/Opportunity/fields/Rechnung_verschickt__c.field-meta.xml
<CustomField>
    <fullName>Rechnung_verschickt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnung verschickt</label>
    <type>Checkbox</type>
</CustomField>