force-app/main/default/objects/Opportunity/fields/Reference_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Reference_Guidelines__c</fullName>
    <description>Rules of information sharing about this project / NDA status</description>
    <label>Reference Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confidential: Any information sharing prohibited</fullName>
            </value>
            <value>
                <fullName>Only sharing of client status allowed</fullName>
            </value>
            <value>
                <fullName>Only sharing of abstract project information allowed</fullName>
            </value>
            <value>
                <fullName>Referencing project allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>