force-app/main/default/objects/Opportunity/fields/Status_im_Zyklus__c.field-meta.xml
<CustomField>
    <fullName>Status_im_Zyklus__c</fullName>
    <label>Status im Zyklus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noch gar nicht digitalisiert</fullName>
            </value>
            <value>
                <fullName>Partielle Digitalisierung</fullName>
            </value>
            <value>
                <fullName>Erste Überlegungen zur Disruption</fullName>
            </value>
            <value>
                <fullName>Einige disruptive Projekte laufen bereits</fullName>
            </value>
            <value>
                <fullName>Viele disruptive Projekte laufen bereits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>