force-app/main/default/objects/Opportunity/fields/Verbliebene_Zweifel__c.field-meta.xml
<CustomField>
    <fullName>Verbliebene_Zweifel__c</fullName>
    <label>Verbliebene Zweifel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hy nicht der richtige Partner</fullName>
            </value>
            <value>
                <fullName>hy Produkte passen nicht</fullName>
            </value>
            <value>
                <fullName>Bekomme das Budget nicht</fullName>
            </value>
            <value>
                <fullName>Disruption ist zu radikal</fullName>
            </value>
            <value>
                <fullName>Interne Widerstände</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>