force-app/main/default/objects/Opportunity/fields/Vortrag__c.field-meta.xml
<CustomField>
    <fullName>Vortrag__c</fullName>
    <description>Bitte gib an, um welche Veranstaltung es sich genau gehandelt hat</description>
    <inlineHelpText>Bitte gib an, um welche Veranstaltung es sich genau gehandelt hat</inlineHelpText>
    <label>Veranstaltung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>