force-app/main/default/objects/Opportunity/fields/Wiedervorlage_am__c.field-meta.xml
<CustomField>
    <fullName>Wiedervorlage_am__c</fullName>
    <label>Wiedervorlage am</label>
    <type>Date</type>
</CustomField>