force-app/main/default/objects/Opportunity/fields/Wiedervorlage_Phase__c.field-meta.xml
<CustomField>
    <fullName>Wiedervorlage_Phase__c</fullName>
    <label>Wiedervorlage Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pitch</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>LoP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>