force-app/main/default/objects/Opportunity/recordTypes/hy_Tech.recordType-meta.xml
<RecordType>
    <fullName>hy_Tech</fullName>
    <active>true</active>
    <businessProcess>Consulting</businessProcess>
    <label>Tech</label>
</RecordType>