force-app/main/default/objects/Opportunity/validationRules/Loss_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Loss_reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(StageName) = &quot;Closed Lost&quot;,
ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
    <errorMessage>Please provide a loss reason</errorMessage>
</ValidationRule>