force-app/main/default/objects/Opportunity/validationRules/Veranstaltung.validationRule-meta.xml
<ValidationRule>
    <fullName>Veranstaltung</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CONTAINS(TEXT(LeadSource), &apos;Veranstaltung&apos;), Vortrag__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Vortrag__c</errorDisplayField>
    <errorMessage>Bitte die genaue Veranstaltung angeben</errorMessage>
</ValidationRule>