force-app/main/default/objects/Opportunity/validationRules/Vortrag.validationRule-meta.xml
<ValidationRule>
    <fullName>Vortrag</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(LeadSource , &apos;Vortrag (nicht CK)&apos;),
ISPICKVAL(LeadSource , &apos;Vortrag&apos;)
),
ISBLANK( Vortrag__c  )
)</errorConditionFormula>
    <errorDisplayField>Vortrag__c</errorDisplayField>
    <errorMessage>Bitte die genaue Veranstaltung angeben</errorMessage>
</ValidationRule>