force-app/main/default/objects/Opportunity/listViews/Open_Opps_pro_User.listView-meta.xml
<ListView>
    <fullName>Open_Opps_pro_User</fullName>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Pitch,Scoping,LoP</value>
    </filters>
    <label>Open Opps pro User</label>
</ListView>